--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    {{ parent() }} - 
+{% endblock %}
+
 {% block body %}
     Homepage.
 {% endblock %}
