Prace nad koszykiem

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,6 +16,10 @@
             <li role="presentation"><a href="{{ path('basket') }}">Koszyk</a></li>
         </ul>
         
+        {% for flashMessage in app.session.flashbag.get('notice') %}
+            <div class="alert alert-success" role="alert">{{ flashMessage }}</div>
+        {% endfor %}
+        
         {% block body %}{% endblock %}
         {% block javascripts %}
             <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
