--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -23,7 +23,9 @@
                     <td>{{ product.name }}</td>
                     <td>{{ product.price }}</td>
                     <td>{{ product.desc }}</td>
-                    <td></td>
+                    <td>
+                        <a href="{{ path('basket_add', {'id': product.id}) }}" class="btn btn-primary">Dodaj do koszyka</a>
+                    </td>
                 </tr>                
             {% endfor %}
             
