--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -4,6 +4,10 @@
 
 {% block body %}
     <h1>Koszyk</h1>
+    
+    {% if basket.products %}
+        <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
+    {% endif %}
 
     <table class="table table-striped">
         <thead>
@@ -11,17 +15,17 @@
                 <th>Id</th>
                 <th>nazwa</th>
                 <th>cena</th>
-                <th>opis</th>
+                <th>ilość</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
-            {% for product in products_in_basket %}
+            {% for product in basket.products %}
                 <tr>
                     <td>{{ product.id }}</td>
                     <td>{{ product.name }}</td>
                     <td>{{ product.price }}</td>
-                    <td>{{ product.desc }}</td>
+                    <td>{{ product.quantity }}</td>
                     <td>
                         <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
                     </td>
