--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -6,6 +6,8 @@
     
     <h1>Lista produktów</h1>
         
+    <a href="{{ path('products_add') }}" class="btn btn-primary" title="Dodaj nowy produkt">Dodaj nowy produkt</a>
+    
     {% for product in products %}
 
         {% if loop.first or (loop.index % 4) == 0  %}
