--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -7,35 +7,38 @@
     
     {% if basket.products %}
         <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
+    
+        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>nazwa</th>
+                        <th>cena</th>
+                        <th>ilość</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for product in basket.products %}
+                        <tr>
+                            <td>{{ product.id }}</td>
+                            <td>{{ product.name }}</td>
+                            <td>{{ product.price }}</td>
+                            <td>{{ form_widget(form.quantity) }}{{ product.quantity }}</td>
+                            <td>
+                                <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            
+        {{ form_end(form) }}
+     
+    {% else %}        
+        <p>Koszyk jest pusty</p>
     {% endif %}
-
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>nazwa</th>
-                <th>cena</th>
-                <th>ilość</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for product in basket.products %}
-                <tr>
-                    <td>{{ product.id }}</td>
-                    <td>{{ product.name }}</td>
-                    <td>{{ product.price }}</td>
-                    <td>{{ product.quantity }}</td>
-                    <td>
-                        <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="5">Koszyk jest pusty</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 
 {% endblock %}
