--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -8,7 +8,7 @@
     {% if basket.products %}
         <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
     
-        {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+        {# {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }} #}
         
             <table class="table table-striped">
                 <thead>
@@ -26,7 +26,7 @@
                             <td>{{ product.id }}</td>
                             <td>{{ product.name }}</td>
                             <td>{{ product.price }}</td>
-                            <td>{{ form_widget(form.quantity) }}{{ product.quantity }}</td>
+                            <td>{# {{ form_widget(form.quantity) }}{{ product.quantity }} #}</td>
                             <td>
                                 <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
                             </td>
@@ -35,7 +35,7 @@
                 </tbody>
             </table>
             
-        {{ form_end(form) }}
+        {# {{ form_end(form) }} #}
      
     {% else %}        
         <p>Koszyk jest pusty</p>
