--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -20,11 +20,12 @@
                 <div class="caption">
                     <h3>{{ product.name }}</h3>
                     <p>{{ product.description | truncate(50, true, ' (...)') }}</p>
+                    <p>Dostępnych: {{ product.amount }}</p>
 
                     <div class="pull-left">
                         <p>
                             <a href="{{ path('basket_add', {'id': product.id}) }}" class="btn btn-primary" role="button">Koszyk</a> 
-                            <a href="#" class="btn btn-default" role="button">Pokaż</a>
+                            <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-default" role="button">Pokaż</a>
                         </p>
                     </div>
                     <div class="pull-right">
