--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -26,13 +26,22 @@
                             <td>{{ product.id }}</td>
                             <td>{{ product.name }}</td>
                             <td>{{ product.price }}</td>
-                            <td>{# {{ form_widget(form.quantity) }}{{ product.quantity }} #}</td>
+                            <td>{{ product.quantity }}</td>
                             <td>
                                 <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
                             </td>
                         </tr>
                     {% endfor %}
                 </tbody>
+                <tfoot>
+                    <tr>
+                        <td></td>
+                        <td>Podsumowanie</td>
+                        <td>{{ basket.price|number_format(2, ',', '') }}</td>
+                        <td>{{ basket.quantity }}</td>
+                        <td></td>
+                    </tr>
+                </tfoot>
             </table>
             
         {# {{ form_end(form) }} #}
