--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -10,7 +10,7 @@
         <div class="form-group">
             <input type="text" name="query" class="form-control" placeholder="Szukaj produktów">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">Szukaj</button>
     </form>
     
 
