--- a/app/Resources/views/products/search.html.twig
+++ b/app/Resources/views/products/search.html.twig
@@ -1,9 +1,55 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}Wyniki wyszukiwania{% endblock %}
+{% block title %}Wyniki wyszukiwania dla "{{ query }}"{% endblock %}
 
 {% block body %}
     
     <h1>{{ block('title') }}</h1>
+    
+    {% if products|length > 0 %}
+        <p>Znaleziono {{ products|length }} produktów.</p>
+    {% else %}
+        <p>Nie znaleziono żadnych produktów spełniających kryteria wyszukiwania. Spróbuj wyszukać ponownie</p>
+    {% endif %}
+    
+    <form action="{{ path('product_search') }}" class="navbar-form" role="search">
+        <div class="form-group">
+            <input type="text" name="query" value="{{ query }}" class="form-control" placeholder="Szukaj produktów">
+        </div>
+        <button type="submit" class="btn btn-default">Szukaj</button>
+    </form>
+    
+    {% for product in products %}
+
+        {% if loop.first or (loop.index % 4) == 0  %}
+            <div class="row">
+            {% endif %} 
+
+            <div class="col-sm-6 col-md-3">
+                <div class="thumbnail clearfix">
+                    <img src="http://placehold.it/240x200" alt="" class="img-thumbnail">
+                    <div class="caption">
+                        <h3>{{ product.name }}</h3>
+                        <p>{{ product.description | truncate(50, true, ' (...)') }}</p>
+                        <p>Dostępnych: {{ product.amount }}</p>
+
+                        <div class="pull-left">
+                            <p>
+                                <a href="{{ path('basket_add', {'id': product.id}) }}" class="btn btn-primary" role="button">Koszyk</a> 
+                                <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-default" role="button">Pokaż</a>
+                            </p>
+                        </div>
+                        <div class="pull-right">
+                            <h4 class="text-danger">{{ product.price }}</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            {% if loop.last or (loop.index % 4) == 0  %}
+            </div>
+        {% endif %}
+
+    {% endfor %}
     
 {% endblock %}
