--- a/app/Resources/views/products/index.html.twig
+++ b/app/Resources/views/products/index.html.twig
@@ -12,36 +12,17 @@
         </div>
         <button type="submit" class="btn btn-default">Szukaj</button>
     </form>
-    
+
 
     {% for product in products %}
 
         {% if loop.first or (loop.index % 4) == 0  %}
             <div class="row">
-            {% endif %} 
+        {% endif %} 
 
-            <div class="col-sm-6 col-md-3">
-                <div class="thumbnail clearfix">
-                    <img src="http://placehold.it/240x200" alt="" class="img-thumbnail">
-                    <div class="caption">
-                        <h3>{{ product.name }}</h3>
-                        <p>{{ product.description | truncate(50, true, ' (...)') }}</p>
-                        <p>Dostępnych: {{ product.amount }}</p>
+            {% include 'products/product.html.twig' with {'product': product } %}
 
-                        <div class="pull-left">
-                            <p>
-                                <a href="{{ path('basket_add', {'id': product.id}) }}" class="btn btn-primary" role="button">Koszyk</a> 
-                                <a href="{{ path('product_show', {'id': product.id}) }}" class="btn btn-default" role="button">Pokaż</a>
-                            </p>
-                        </div>
-                        <div class="pull-right">
-                            <h4 class="text-danger">{{ product.price }}</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            {% if loop.last or (loop.index % 4) == 0  %}
+        {% if loop.last or (loop.index % 4) == 0  %}
             </div>
         {% endif %}
 
