--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -6,9 +6,11 @@
     <h1>Koszyk</h1>
     
     {% if basket.products %}
-        <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
     
-        {# {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }} #}
+        <form method="post" >
+            
+            <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
+            <input type="submit" class="btn btn-info" value="Zaktualizuj stan" />
         
             <table class="table table-striped">
                 <thead>
@@ -26,7 +28,8 @@
                             <td>{{ product.id }}</td>
                             <td>{{ product.name }}</td>
                             <td>{{ product.price }}</td>
-                            <td>{{ product.quantity }}</td>
+                            <td class="col-xs-1">
+                                <input type="text" class="form-control" name="quantity[{{ product.id }}]" value="{{ product.quantity }}" /></td>
                             <td>
                                 <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger">usuń</a>
                             </td>
@@ -44,7 +47,7 @@
                 </tfoot>
             </table>
             
-        {# {{ form_end(form) }} #}
+        </form>
      
     {% else %}        
         <p>Koszyk jest pusty</p>
