--- a/src/AppBundle/Resources/views/Basket/index.html.twig
+++ b/src/AppBundle/Resources/views/Basket/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Koszyk</h1>
     
     {% if basket.products %}
-        <a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>
+        {#<a href="{{ path('basket_clear') }}" class="btn btn-warning" title="Wyczyść koszyk">Wyczyść Koszyk</a>#}
             
         {#
         <table class="table table-striped">
