--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,36 +19,67 @@
 
         <div class="container-fluid">
 
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="{{ path('homepage') }}">Shop</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="{{ path('products_list') }}">Produkty</a></li>
+                            <li><a href="{{ path('basket') }}">Koszyk</a></li>                            
+                        </ul>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
+                        <ul class="nav navbar-nav navbar-right">
+                            
+                            {% if app.user %}
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Witaj {{ app.user.username }}<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        {% if is_granted('ROLE_ADMIN') %}
+                                            <li><a href="{{ path('product') }}">Panel admina</a></li>
+                                            <li class="divider"></li>
+                                        {% endif %}
+                                        <li><a href="{{ path('fos_user_profile_edit') }}">Profil</a></li>
+                                        <li><a href="#">Moje zamówienia</a></li>
+                                        <li><a href="#">Moje komentarze</a></li>
+                                        <li class="divider"></li>
+                                        <li><a href="{{ path('fos_user_security_logout') }}">Wyloguj</a></li>
+                                    </ul>
+                                </li>
+                            {% else %}
+                                <li><a href="{{ path('fos_user_security_login') }}">zaloguj się</a></li>
+                            {% endif %}
+                            
+                            
+                            
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+       
+
             <div class="row">
-                <div class="col-md-12">
+                {% block sidebar %}
+                    <div class="col-md-2">
 
-                    {% set currentPath = app.request.get('_route') %}
-                    <ul class="nav nav-tabs">
-                        <li role="presentation"
-                            {% if currentPath == 'homepage' %}
-                                class="active"
-                            {% endif %}
-                            ><a href="{{ path('homepage') }}">Strona główna</a></li>
-                        <li role="presentation"
-                            {% if currentPath == 'products_list' %}
-                                class="active"
-                            {% endif %}
-                            ><a href="{{ path('products_list') }}">Produkty</a></li>
-                        <li role="presentation"
-                            {% if currentPath == 'basket' %}
-                                class="active"
-                            {% endif %}
-                            ><a href="{{ path('basket') }}">Koszyk</a></li>
-                    </ul>
-
-                </div>
-
-            </div>
-
-            <div class="row">
-                <div class="col-md-2">
-                    {{ render(controller('AppBundle:Category:list')) }}
-                </div>
+                        {{ render(controller('AppBundle:Category:list')) }}
+                    </div>
+                {% endblock %}
                 <div class="col-md-10">
 
                     {% for flashMessage in app.session.flashbag.get('notice') %}
@@ -71,9 +102,11 @@
         </div>    
 
         <div class="row">
-            <div class="col-md-12">
-                ShopApp
-            </div>
+            {% block footer %}
+                <div class="col-md-12">
+                    Copyright by Me
+                </div>
+            {% endblock %}
         </div>
 
     </div>
