Przypisanie użytkownika do komentarza + draft dla głosowania na komentarze

--- a/app/Resources/views/products/show.html.twig
+++ b/app/Resources/views/products/show.html.twig
@@ -25,35 +25,46 @@
 
     <h2> Komentarze</h2>
 
-    <form method="post" novalidate>
+    {% if not app.user %}
+        
+        <p>Aby móc dodawać komentarz musisz się wcześniej <a href="{{ path('fos_user_security_login') }}" title="Formularz logowania">zalogować</a>.</p>
+        
+    {% else %}
+        
+        <form method="post" novalidate>
 
-        <div class="form-group">
-            {{ form_row(form.content) }}
+            <div class="form-group">
+                {{ form_row(form.content) }}
 
-            {#
-                {{ form_label(form.content) }}
-                {{ form_errors(form.content) }}
-                {{ form_widget(form.content) }}
-            #}
+                {#
+                    {{ form_label(form.content) }}
+                    {{ form_errors(form.content) }}
+                    {{ form_widget(form.content) }}
+                #}
 
-        </div>
+            </div>
 
-        {{ form_rest(form) }}
+            {{ form_rest(form) }}
 
-        <input class="btn btn-success" type="submit" value="Dodaj komentarz" />
+            <input class="btn btn-success" type="submit" value="Dodaj komentarz" />
 
-    </form>
+        </form>
+            
+    {% endif %}
 
     <br />
     
     {% for comment in product.comments if comment.verified %}
 
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <p>{{ comment.content }}</p>
-                    <small>Dodany {{ comment.createdAt|date('d-m-Y') }}</small>
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="pull-right">
+                    {{ comment.nbVoteUp }} <a href="#" title="Up"> up </a> | {{ comment.nbVoteDown }} <a href="#" title="Down"> down </a>
                 </div>
+                <p>{{ comment.content }}</p>
+                <small>Dodany {{ comment.createdAt|date('d-m-Y') }} przez {{ comment.user }}</small>
             </div>
+        </div>
 
     {% else %}
         
