--- a/app/Resources/views/Products/index.html.twig
+++ b/app/Resources/views/Products/index.html.twig
@@ -6,21 +6,13 @@
 
     <h1>Lista produktów</h1>
 
-    <form action="{{ path('product_search') }}" class="navbar-form" role="search">
-        <div class="form-group">
-            <input type="text" name="query" class="form-control" placeholder="Szukaj produktów">
-        </div>
-        <button type="submit" class="btn btn-default">Szukaj</button>
-    </form>
-
-
     {% for product in products %}
 
         {% if loop.first or (loop.index % 4) == 0  %}
             <div class="row">
         {% endif %} 
 
-            {% include 'products/product.html.twig' with {'product': product } %}
+        {% include 'Products/product.html.twig' with {'product': product } %}
 
         {% if loop.last or (loop.index % 4) == 0  %}
             </div>
