--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -38,11 +38,11 @@
                             <li><a href="{{ path('products_list') }}">Produkty</a></li>
                             <li><a href="{{ path('basket') }}">Koszyk</a></li>                            
                         </ul>
-                        <form class="navbar-form navbar-left" role="search">
+                        <form class="navbar-form navbar-left" role="search" action="{{ path('product_search') }}" method="GET">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+                                <input type="text" name="query" class="form-control" placeholder="Wpisz szukaną frazę">
                             </div>
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <button type="submit" class="btn btn-default">Szukaj</button>
                         </form>
                         <ul class="nav navbar-nav navbar-right">
                             
@@ -55,17 +55,21 @@
                                             <li class="divider"></li>
                                         {% endif %}
                                         <li><a href="{{ path('fos_user_profile_edit') }}">Profil</a></li>
-                                        <li><a href="#">Moje zamówienia</a></li>
-                                        <li><a href="#">Moje komentarze</a></li>
+                                        <li><a href="{{ path('orders_list') }}">Moje zamówienia</a></li>
+                                        <li><a href="{{ path('comments_list') }}">Moje komentarze</a></li>
                                         <li class="divider"></li>
                                         <li><a href="{{ path('fos_user_security_logout') }}">Wyloguj</a></li>
                                     </ul>
                                 </li>
                             {% else %}
-                                <li><a href="{{ path('fos_user_security_login') }}">zaloguj się</a></li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Witaj Nieznajomy<span class="caret"></span></a>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li><a href="{{ path('fos_user_security_login') }}">zaloguj się</a></li>
+                                        <li><a href="{{ path('fos_user_registration_register') }}">zarejestruj się</a></li>
+                                    </ul>
+                                </li>   
                             {% endif %}
-                            
-                            
                             
                         </ul>
                     </div><!-- /.navbar-collapse -->
@@ -76,24 +80,23 @@
             <div class="row">
                 {% block sidebar %}
                     <div class="col-md-2">
-
+                        <h5>Kategorie</h5>
                         {{ render(controller('AppBundle:Category:list')) }}
+                        <h5>Koszyk</h5>
+                        {{ render(controller('AppBundle:Basket:list')) }}
                     </div>
                 {% endblock %}
                 <div class="col-md-10">
 
-                    {% for flashMessage in app.session.flashbag.get('notice') %}
-                        <div class="alert alert-success alert-dismissible" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            {{ flashMessage }}
-                        </div>
-                    {% endfor %}
-
-                    {% for flashMessage in app.session.flashbag.get('error') %}
-                        <div class="alert alert-danger alert-dismissible" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                            {{ flashMessage }}
-                        </div>
+                    {% for key, messages in app.session.getFlashBag() %}
+                        {% if key in ['success', 'warning', 'danger', 'info'] %}
+                            {% for msg in messages %}
+                                <div class="alert alert-{{ key }} alert-dismissible" role="alert">
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                    {{ msg }}
+                                </div>
+                            {% endfor %}
+                        {% endif %}
                     {% endfor %}
 
                 {% block body %}{% endblock %}
@@ -103,9 +106,7 @@
 
         <div class="row">
             {% block footer %}
-                <div class="col-md-12">
-                    Copyright by Me
-                </div>
+                
             {% endblock %}
         </div>
 
