--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,7 @@
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Witaj {{ app.user.username }}<span class="caret"></span></a>
                                     <ul class="dropdown-menu" role="menu">
                                         {% if is_granted('ROLE_ADMIN') %}
-                                            <li><a href="{{ path('product') }}">Panel admina</a></li>
+                                            <li><a href="{{ path('admin') }}">Panel admina</a></li>
                                             <li class="divider"></li>
                                         {% endif %}
                                         <li><a href="{{ path('fos_user_profile_edit') }}">Profil</a></li>
