--- a/app/Resources/views/Basket/list.html.twig
+++ b/app/Resources/views/Basket/list.html.twig
@@ -4,7 +4,7 @@
         {% for product in basket.products %}
             <div class="row">
                 <div class="col-md-8 col-md-offset-1">
-                    <a href="{{ path('product_show', {'id': product.id}) }}">{{ product.name }}</a><br>
+                    <a href="{{ path('product_show', {'slug': product.slug}) }}">{{ product.name }}</a><br>
                     {{ product.quantity }} x {{ product.price|number_format(2, ',', '') }} zł
                 </div>
             </div>
