--- a/app/Resources/views/Products/product.html.twig
+++ b/app/Resources/views/Products/product.html.twig
@@ -1,8 +1,7 @@
 <div class="col-sm-6 col-md-3">
     <div class="thumbnail clearfix">
         {% if product.imageName %}
-            <img src="{{ asset('images/products/' ~ product.imageName) }}" alt="" class="img-thumbnail" width="240">
-            {# <img src="{{ vich_uploader_asset(product, 'product_image') }}" alt="" class="img-thumbnail"> #}
+            <img src="{{ vich_uploader_asset(product, 'product_image') | imagine_filter('product_image_thumb') }}" alt="" class="img-thumbnail">
         {% else %}
             <img src="http://placehold.it/240x200" alt="" class="img-thumbnail">
         {% endif %}
