dodanie usun prompt

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -115,6 +115,11 @@
     {% block javascripts %}
         <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        
+        {% javascripts '../app/Resources/public/js/*' %}
+        	<script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+        
     {% endblock %}
 </body>
 </html>
