Dodane głosowanie AJAXowe na komentarze

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -7,9 +7,9 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
             <link href='http://fonts.googleapis.com/css?family=Open+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css">
-            
+
             {% stylesheets '../app/Resources/public/css/style.css' %}
-                <link rel="stylesheet" type="text/css" href="{{ asset_url }}"/>
+            <link rel="stylesheet" type="text/css" href="{{ asset_url }}"/>
             {% endstylesheets %}
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
@@ -44,7 +44,7 @@
                             <button type="submit" class="btn btn-default">Szukaj</button>
                         </form>
                         <ul class="nav navbar-nav navbar-right">
-                            
+
                             {% if app.user %}
                                 <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Witaj {{ app.user.username }}<span class="caret"></span></a>
@@ -52,7 +52,7 @@
                                         {% if is_granted('ROLE_ADMIN') %}
                                             <li><a href="{{ path('admin') }}">Panel admina</a></li>
                                             <li class="divider"></li>
-                                        {% endif %}
+                                            {% endif %}
                                         <li><a href="{{ path('fos_user_profile_edit') }}">Profil</a></li>
                                         <li><a href="{{ path('orders_list') }}">Moje zamówienia</a></li>
                                         <li><a href="{{ path('comments_list') }}">Moje komentarze</a></li>
@@ -69,12 +69,12 @@
                                     </ul>
                                 </li>   
                             {% endif %}
-                            
+
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div><!-- /.container-fluid -->
             </nav>
-       
+
 
             <div class="row">
                 {% block sidebar %}
@@ -105,7 +105,7 @@
 
         <div class="row">
             {% block footer %}
-                
+
             {% endblock %}
         </div>
 
@@ -113,9 +113,15 @@
 
     {% block javascripts %}
         <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+        <script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+        <script src="{{ path('fos_js_routing_js', {'callback': 'fos.Router.setData'}) }}"></script>
+
+        {% javascripts '../app/Resources/public/js/*' %}
+            <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+
     {% endblock %}
 </body>
 </html>
