--- a/app/Resources/views/Basket/index.html.twig
+++ b/app/Resources/views/Basket/index.html.twig
@@ -33,7 +33,7 @@
                             <td class="col-xs-1">
                                 <input type="text" class="form-control" name="quantity[{{ product.id }}]" value="{{ product.quantity }}" /></td>
                             <td>
-                                <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger remove">usuń</a>
+                                <a href="{{ path('basket_remove', { 'id': product.id }) }}" class="btn btn-danger remove" data-bb="confirm">usuń</a>
                             </td>
                         </tr>
                     {% endfor %}
