--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,9 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li><a href="{{ path('products_list') }}">Produkty</a></li>
-                            <li><a href="{{ path('basket') }}">Koszyk</a></li>                            
+                            <li><a href="{{ path('basket') }}">Koszyk</a></li>
+                            <li><a href="{{ path('set_locale', {'locale': 'en'}) }}">EN</a></li> 
+                            <li><a href="{{ path('set_locale', {'locale': 'pl'}) }}">PL</a></li> 
                         </ul>
                         <form class="navbar-form navbar-left" role="search" action="{{ path('product_search') }}" method="GET">
                             <div class="form-group">
